<resources>
    <string name="app_name">WiFiFingerprinting</string>
    <string name="scan">Scan</string>
    <string name="location_name">Name</string>
    <string name="location">Location</string>
    <string name="status_ready">Ready</string>
    <string name="status_sampling">Sampling</string>
    <string name="status_training">Training</string>
    <string name="status_error">Error</string>
    <string name="status_cleared">Cleared</string>
    <string name="train">Train</string>
    <string name="clear">Clear</string>
    <string name="sampling">Sampling</string>
    <string name="classification">Classification</string>
    <string name="where">Where am I?</string>
    <string name="thinking">Grinding gears</string>
</resources>
