<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:gravity="center"
    tools:context=".sampling.SamplingActivity">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content">

        <Button
            android:id="@+id/btn_scan"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="16dp"
            android:onClick="scanAction"
            android:text="@string/scan"
            app:layout_constraintEnd_toEndOf="@+id/txt_location"
            app:layout_constraintStart_toStartOf="@+id/txt_location"
            app:layout_constraintTop_toBottomOf="@+id/txt_location" />

        <Button
            android:id="@+id/btn_sampling"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="48dp"
            android:onClick="trainAction"
            android:text="@string/train"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toStartOf="@+id/btn_classification"
            app:layout_constraintHorizontal_bias="0.5"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/lbl_status" />

        <Button
            android:id="@+id/btn_classification"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:onClick="clearAction"
            android:text="@string/clear"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.5"
            app:layout_constraintStart_toEndOf="@+id/btn_sampling"
            app:layout_constraintTop_toTopOf="@+id/btn_sampling" />

        <EditText
            android:id="@+id/txt_location"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="8dp"
            android:ems="10"
            android:inputType="textPersonName"
            android:text="@string/location_name"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/lbl_location" />

        <TextView
            android:id="@+id/lbl_location"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="48dp"
            android:text="@string/location"
            app:layout_constraintStart_toStartOf="@+id/txt_location"
            app:layout_constraintTop_toBottomOf="@+id/lbl_orientation" />

        <TextView
            android:id="@+id/lbl_status"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="8dp"
            android:text="@string/status_ready"
            app:layout_constraintEnd_toEndOf="@+id/btn_scan"
            app:layout_constraintStart_toStartOf="@+id/btn_scan"
            app:layout_constraintTop_toBottomOf="@id/btn_scan" />

        <TextView
            android:id="@+id/lbl_orientation"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="@+id/lbl_location"
            app:layout_constraintTop_toTopOf="parent"
            tools:text="0" />
    </androidx.constraintlayout.widget.ConstraintLayout>
</LinearLayout>